# Anotsys

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
doc/: CommentSwiperV1.0.md  PomodoroV1.0.md  RegexDebuggerV1.0.md  RegexLibraryV1.0.md  RegexSandboxV1.0.md  RegexVisualizerV1.0.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MainLayout.tsx  Sidebar.tsx
src/pages/: AiNotificationSystemPage.tsx  CommentSwiperPage.tsx  CommentSwiperResultPage.tsx  FormatterPage.tsx  NpmSchedulePage.tsx  PomodoroPage.tsx  RegexDebuggerPage.tsx  RegexLibraryPage.tsx  RegexSandboxPage.tsx  RegexVisualizerPage.tsx  ToDoPage.tsx  WelcomePage.tsx
src/utils/: codeUtils.ts  regexLibraryData.ts
