[package]
name = "anotsys"
version = "0.0.1"
description = "A Tauri App"
authors = ["Çınar Yıldırım"]
edition = "2021"

[lib]
name = "anotsys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.1", features = ["wry", "devtools"] }
wry = "0.52.1"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard = "2"
